--- a/Comptelpan.csproj
+++ b/Comptelpan.csproj
@@ -46,19 +46,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Computadora.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="Pantallatv.cs" />
+    <Compile Include="Formulario1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Formulario1.Designer.cs">
+      <DependentUpon>Formulario1.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Telefono.cs" />
-    <Compile Include="Television.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Pantallalg.cs" />
+    <Compile Include="Lgwebos.cs" />
+    <EmbeddedResource Include="Formulario1.resx">
+      <DependentUpon>Formulario1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
